--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "math.js": "^1.1.46",
+    "mathjs": "^12.4.0",
     "phil-lib": "^1.1.2"
   }
 }
