--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/seedrandom": "^3.0.8",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
   "dependencies": {
     "mathjs": "^12.4.0",
-    "phil-lib": "^1.1.2"
+    "phil-lib": "^1.1.2",
+    "seedrandom": "^3.0.5"
   }
 }
